--- a/06-interactive-widgets/projects/starter/pubspec.yaml
+++ b/06-interactive-widgets/projects/starter/pubspec.yaml
@@ -12,6 +12,11 @@ dependencies:
     sdk: flutter
   google_fonts: ^2.1.0
   provider: ^6.0.0
+  flutter_colorpicker: ^0.6.0
+  # Provides internationalization and localization utilities - use to format dates
+  intl: ^0.17.0
+  # Generates unique keys for each grocery item - lets you know which item to add, update or remove
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
